--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -1,26 +1,30 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,NbrOfConversion
+ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-1\#ChannelRegularConversion=1
-ADC1.Resolution=ADC_RESOLUTION_12B
+ADC1.Resolution=ADC_RESOLUTION_10B
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES
 ADC1.master=1
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_5
 ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,ClockPrescaler,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,Resolution
+ADC2.IPParameters=Rank-1\#ChannelRegularConversion,ClockPrescaler,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag
 ADC2.NbrOfConversionFlag=1
-ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.Resolution=ADC_RESOLUTION_10B
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES
+ADC2.Rank-1\#ChannelRegularConversion=1
+ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_56CYCLES
 ADC3.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC3.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_3
 ADC3.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
-ADC3.IPParameters=Rank-1\#ChannelRegularConversion,ClockPrescaler,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,Resolution
+ADC3.IPParameters=Rank-1\#ChannelRegularConversion,ClockPrescaler,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,Resolution,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversion
+ADC3.NbrOfConversion=2
 ADC3.NbrOfConversionFlag=1
 ADC3.Rank-1\#ChannelRegularConversion=1
+ADC3.Rank-2\#ChannelRegularConversion=2
 ADC3.Resolution=ADC_RESOLUTION_10B
-ADC3.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
+ADC3.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES
+ADC3.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES
 Dma.Request0=USART2_RX
 Dma.RequestsNb=1
 Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
@@ -69,44 +73,45 @@ Mcu.Pin13=PA1
 Mcu.Pin14=PA2
 Mcu.Pin15=PA3
 Mcu.Pin16=PA4
-Mcu.Pin17=PA6
-Mcu.Pin18=PA7
-Mcu.Pin19=PC4
+Mcu.Pin17=PA5
+Mcu.Pin18=PA6
+Mcu.Pin19=PA7
 Mcu.Pin2=PE4
-Mcu.Pin20=PC5
-Mcu.Pin21=PB13
-Mcu.Pin22=PB14
-Mcu.Pin23=PD8
-Mcu.Pin24=PD9
-Mcu.Pin25=PD12
-Mcu.Pin26=PG6
-Mcu.Pin27=PG7
-Mcu.Pin28=PA8
-Mcu.Pin29=PA9
+Mcu.Pin20=PC4
+Mcu.Pin21=PC5
+Mcu.Pin22=PB13
+Mcu.Pin23=PB14
+Mcu.Pin24=PD8
+Mcu.Pin25=PD9
+Mcu.Pin26=PD12
+Mcu.Pin27=PG6
+Mcu.Pin28=PG7
+Mcu.Pin29=PA8
 Mcu.Pin3=PE5
-Mcu.Pin30=PA10
-Mcu.Pin31=PA11
-Mcu.Pin32=PA12
-Mcu.Pin33=PA13
-Mcu.Pin34=PA14
-Mcu.Pin35=PD5
-Mcu.Pin36=PD6
-Mcu.Pin37=PG11
-Mcu.Pin38=PG13
-Mcu.Pin39=PB3
+Mcu.Pin30=PA9
+Mcu.Pin31=PA10
+Mcu.Pin32=PA11
+Mcu.Pin33=PA12
+Mcu.Pin34=PA13
+Mcu.Pin35=PA14
+Mcu.Pin36=PD5
+Mcu.Pin37=PD6
+Mcu.Pin38=PG11
+Mcu.Pin39=PG13
 Mcu.Pin4=PC13
-Mcu.Pin40=PB7
-Mcu.Pin41=VP_SYS_VS_Systick
-Mcu.Pin42=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin43=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin44=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin45=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin40=PB3
+Mcu.Pin41=PB7
+Mcu.Pin42=VP_SYS_VS_Systick
+Mcu.Pin43=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin44=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin45=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin46=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PC14/OSC32_IN
 Mcu.Pin6=PC15/OSC32_OUT
 Mcu.Pin7=PF0
 Mcu.Pin8=PF6
 Mcu.Pin9=PH0/OSC_IN
-Mcu.PinsNb=46
+Mcu.PinsNb=47
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -163,7 +168,9 @@ PA2.Locked=true
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
 PA3.Signal=ADCx_IN3
+PA4.Locked=true
 PA4.Signal=ADCx_IN4
+PA5.Signal=ADCx_IN5
 PA6.Signal=S_TIM3_CH1
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
@@ -319,7 +326,7 @@ ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,9-MX_ADC2_Init-ADC2-false-HAL-true,10-MX_ADC3_Init-ADC3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_USART2_UART_Init-USART2-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -410,10 +417,12 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
-SH.ADCx_IN3.0=ADC2_IN3,IN3
+SH.ADCx_IN3.0=ADC3_IN3,IN3
 SH.ADCx_IN3.ConfNb=1
-SH.ADCx_IN4.0=ADC1_IN4,IN4
+SH.ADCx_IN4.0=ADC1_IN4
 SH.ADCx_IN4.ConfNb=1
+SH.ADCx_IN5.0=ADC2_IN5,IN5
+SH.ADCx_IN5.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
