--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -14,19 +14,33 @@ ADC2.IPParameters=Rank-1\#ChannelRegularConversion,ClockPrescaler,Channel-1\#Cha
 ADC2.NbrOfConversionFlag=1
 ADC2.Rank-1\#ChannelRegularConversion=1
 ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_56CYCLES
-ADC3.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
-ADC3.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC3.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC3.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC3.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
-ADC3.IPParameters=Rank-1\#ChannelRegularConversion,ClockPrescaler,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,Resolution,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversion
+ADC3.DMAContinuousRequests=ENABLE
+ADC3.EOCSelection=ADC_EOC_SEQ_CONV
+ADC3.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T1_TRGO
+ADC3.IPParameters=Rank-1\#ChannelRegularConversion,ClockPrescaler,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,Resolution,NbrOfConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,EOCSelection,ExternalTrigConv,DMAContinuousRequests
 ADC3.NbrOfConversion=2
 ADC3.NbrOfConversionFlag=1
 ADC3.Rank-1\#ChannelRegularConversion=1
 ADC3.Rank-2\#ChannelRegularConversion=2
 ADC3.Resolution=ADC_RESOLUTION_10B
-ADC3.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES
-ADC3.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES
+ADC3.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
+ADC3.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
+Dma.ADC3.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC3.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC3.1.Instance=DMA2_Stream0
+Dma.ADC3.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC3.1.MemInc=DMA_MINC_ENABLE
+Dma.ADC3.1.Mode=DMA_CIRCULAR
+Dma.ADC3.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.ADC3.1.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC3.1.Priority=DMA_PRIORITY_LOW
+Dma.ADC3.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=USART2_RX
-Dma.RequestsNb=1
+Dma.Request1=ADC3
+Dma.RequestsNb=2
 Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART2_RX.0.Instance=DMA1_Stream5
@@ -47,12 +61,13 @@ KeepUserPlacement=true
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=TIM3
-Mcu.IP11=TIM4
-Mcu.IP12=USART2
-Mcu.IP13=USART3
-Mcu.IP14=USB_DEVICE
-Mcu.IP15=USB_OTG_FS
+Mcu.IP10=TIM2
+Mcu.IP11=TIM3
+Mcu.IP12=TIM4
+Mcu.IP13=USART2
+Mcu.IP14=USART3
+Mcu.IP15=USB_DEVICE
+Mcu.IP16=USB_OTG_FS
 Mcu.IP2=ADC3
 Mcu.IP3=CORTEX_M7
 Mcu.IP4=DMA
@@ -60,8 +75,8 @@ Mcu.IP5=ETH
 Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=SYS
-Mcu.IP9=TIM2
-Mcu.IPNb=16
+Mcu.IP9=TIM1
+Mcu.IPNb=17
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -72,36 +87,36 @@ Mcu.Pin12=PA0/WKUP
 Mcu.Pin13=PA1
 Mcu.Pin14=PA2
 Mcu.Pin15=PA3
-Mcu.Pin16=PA4
-Mcu.Pin17=PA5
-Mcu.Pin18=PA6
-Mcu.Pin19=PA7
+Mcu.Pin16=PA5
+Mcu.Pin17=PA6
+Mcu.Pin18=PA7
+Mcu.Pin19=PC4
 Mcu.Pin2=PE4
-Mcu.Pin20=PC4
-Mcu.Pin21=PC5
-Mcu.Pin22=PB13
-Mcu.Pin23=PB14
-Mcu.Pin24=PD8
-Mcu.Pin25=PD9
-Mcu.Pin26=PD12
-Mcu.Pin27=PG6
-Mcu.Pin28=PG7
-Mcu.Pin29=PA8
+Mcu.Pin20=PC5
+Mcu.Pin21=PB13
+Mcu.Pin22=PB14
+Mcu.Pin23=PD8
+Mcu.Pin24=PD9
+Mcu.Pin25=PD12
+Mcu.Pin26=PG6
+Mcu.Pin27=PG7
+Mcu.Pin28=PA8
+Mcu.Pin29=PA9
 Mcu.Pin3=PE5
-Mcu.Pin30=PA9
-Mcu.Pin31=PA10
-Mcu.Pin32=PA11
-Mcu.Pin33=PA12
-Mcu.Pin34=PA13
-Mcu.Pin35=PA14
-Mcu.Pin36=PD5
-Mcu.Pin37=PD6
-Mcu.Pin38=PG11
-Mcu.Pin39=PG13
+Mcu.Pin30=PA10
+Mcu.Pin31=PA11
+Mcu.Pin32=PA12
+Mcu.Pin33=PA13
+Mcu.Pin34=PA14
+Mcu.Pin35=PD5
+Mcu.Pin36=PD6
+Mcu.Pin37=PG11
+Mcu.Pin38=PG13
+Mcu.Pin39=PB3
 Mcu.Pin4=PC13
-Mcu.Pin40=PB3
-Mcu.Pin41=PB7
-Mcu.Pin42=VP_SYS_VS_Systick
+Mcu.Pin40=PB7
+Mcu.Pin41=VP_SYS_VS_Systick
+Mcu.Pin42=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin43=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin44=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin45=VP_TIM4_VS_ClockSourceINT
@@ -117,8 +132,10 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
 MxCube.Version=5.3.0
 MxDb.Version=DB.5.0.30
+NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -168,8 +185,6 @@ PA2.Locked=true
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
 PA3.Signal=ADCx_IN3
-PA4.Locked=true
-PA4.Signal=ADCx_IN4
 PA5.Signal=ADCx_IN5
 PA6.Signal=S_TIM3_CH1
 PA7.GPIOParameters=GPIO_Label
@@ -326,7 +341,7 @@ ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_ADC2_Init-ADC2-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -419,8 +434,6 @@ SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN3.0=ADC3_IN3,IN3
 SH.ADCx_IN3.ConfNb=1
-SH.ADCx_IN4.0=ADC1_IN4
-SH.ADCx_IN4.ConfNb=1
 SH.ADCx_IN5.0=ADC2_IN5,IN5
 SH.ADCx_IN5.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
@@ -431,6 +444,11 @@ SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
+TIM1.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterOutputTrigger2
+TIM1.Period=50
+TIM1.Prescaler=32000
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM1.TIM_MasterOutputTrigger2=TIM_TRGO2_UPDATE
 TIM2.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
 TIM2.Period=50
 TIM2.Prescaler=32000
@@ -457,6 +475,8 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
