--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -81,53 +81,56 @@ Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PH0/OSC_IN
-Mcu.Pin11=PH1/OSC_OUT
-Mcu.Pin12=PC1
-Mcu.Pin13=PA0/WKUP
-Mcu.Pin14=PA1
-Mcu.Pin15=PA2
-Mcu.Pin16=PA3
-Mcu.Pin17=PA5
-Mcu.Pin18=PA6
-Mcu.Pin19=PA7
+Mcu.Pin10=PF6
+Mcu.Pin11=PF8
+Mcu.Pin12=PH0/OSC_IN
+Mcu.Pin13=PH1/OSC_OUT
+Mcu.Pin14=PC1
+Mcu.Pin15=PA0/WKUP
+Mcu.Pin16=PA1
+Mcu.Pin17=PA2
+Mcu.Pin18=PA3
+Mcu.Pin19=PA5
 Mcu.Pin2=PE4
-Mcu.Pin20=PC4
-Mcu.Pin21=PC5
-Mcu.Pin22=PB13
-Mcu.Pin23=PB14
-Mcu.Pin24=PD8
-Mcu.Pin25=PD9
-Mcu.Pin26=PD12
-Mcu.Pin27=PG6
-Mcu.Pin28=PG7
-Mcu.Pin29=PA8
+Mcu.Pin20=PA6
+Mcu.Pin21=PA7
+Mcu.Pin22=PC4
+Mcu.Pin23=PC5
+Mcu.Pin24=PB13
+Mcu.Pin25=PB14
+Mcu.Pin26=PD8
+Mcu.Pin27=PD9
+Mcu.Pin28=PD12
+Mcu.Pin29=PG6
 Mcu.Pin3=PE5
-Mcu.Pin30=PA9
-Mcu.Pin31=PA10
-Mcu.Pin32=PA11
-Mcu.Pin33=PA12
-Mcu.Pin34=PA13
-Mcu.Pin35=PA14
-Mcu.Pin36=PD5
-Mcu.Pin37=PD6
-Mcu.Pin38=PG11
-Mcu.Pin39=PG13
+Mcu.Pin30=PG7
+Mcu.Pin31=PA8
+Mcu.Pin32=PA9
+Mcu.Pin33=PA10
+Mcu.Pin34=PA11
+Mcu.Pin35=PA12
+Mcu.Pin36=PA13
+Mcu.Pin37=PA14
+Mcu.Pin38=PD5
+Mcu.Pin39=PD6
 Mcu.Pin4=PC13
-Mcu.Pin40=PB3
-Mcu.Pin41=PB7
-Mcu.Pin42=VP_SYS_VS_Systick
-Mcu.Pin43=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin44=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin45=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin46=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin47=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin40=PG11
+Mcu.Pin41=PG13
+Mcu.Pin42=PB3
+Mcu.Pin43=PB7
+Mcu.Pin44=PE0
+Mcu.Pin45=VP_SYS_VS_Systick
+Mcu.Pin46=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin47=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin48=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin49=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin5=PC14/OSC32_IN
+Mcu.Pin50=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin6=PC15/OSC32_OUT
 Mcu.Pin7=PF0
 Mcu.Pin8=PF3
-Mcu.Pin9=PF6
-Mcu.PinsNb=48
+Mcu.Pin9=PF5
+Mcu.PinsNb=51
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -265,6 +268,10 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE0.GPIOParameters=GPIO_Label
+PE0.GPIO_Label=angle_0
+PE0.Locked=true
+PE0.Signal=GPIO_Output
 PE2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE2.GPIO_Label=BlueButton
 PE2.GPIO_PuPd=GPIO_PULLDOWN
@@ -293,8 +300,16 @@ PF3.GPIOParameters=GPIO_Label
 PF3.GPIO_Label=Auto_Hand_Betrieb
 PF3.Locked=true
 PF3.Signal=GPIO_Input
+PF5.GPIOParameters=GPIO_Label
+PF5.GPIO_Label=Flash_trans
+PF5.Locked=true
+PF5.Signal=GPIO_Input
 PF6.Mode=IN4
 PF6.Signal=ADC3_IN4
+PF8.GPIOParameters=GPIO_Label
+PF8.GPIO_Label=Memory_store
+PF8.Locked=true
+PF8.Signal=GPIO_Input
 PG11.GPIOParameters=GPIO_Label
 PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
 PG11.Locked=true
@@ -349,7 +364,7 @@ ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_ADC2_Init-ADC2-false-HAL-true,14-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_ADC2_Init-ADC2-false-HAL-true,14-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
