--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -64,10 +64,11 @@ Mcu.IP1=ADC2
 Mcu.IP10=TIM2
 Mcu.IP11=TIM3
 Mcu.IP12=TIM4
-Mcu.IP13=USART2
-Mcu.IP14=USART3
-Mcu.IP15=USB_DEVICE
-Mcu.IP16=USB_OTG_FS
+Mcu.IP13=TIM10
+Mcu.IP14=USART2
+Mcu.IP15=USART3
+Mcu.IP16=USB_DEVICE
+Mcu.IP17=USB_OTG_FS
 Mcu.IP2=ADC3
 Mcu.IP3=CORTEX_M7
 Mcu.IP4=DMA
@@ -76,7 +77,7 @@ Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=SYS
 Mcu.IP9=TIM1
-Mcu.IPNb=17
+Mcu.IPNb=18
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -119,18 +120,20 @@ Mcu.Pin41=PG11
 Mcu.Pin42=PG13
 Mcu.Pin43=PB3
 Mcu.Pin44=PB7
-Mcu.Pin45=VP_SYS_VS_Systick
-Mcu.Pin46=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin47=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin49=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin45=PB8
+Mcu.Pin46=VP_SYS_VS_Systick
+Mcu.Pin47=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin48=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin49=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin5=PC14/OSC32_IN
-Mcu.Pin50=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin50=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin51=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin52=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin6=PC15/OSC32_OUT
 Mcu.Pin7=PF0
 Mcu.Pin8=PF1
 Mcu.Pin9=PF3
-Mcu.PinsNb=51
+Mcu.PinsNb=53
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -222,6 +225,7 @@ PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PB8.Signal=S_TIM10_CH1
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
@@ -296,8 +300,9 @@ PF1.GPIOParameters=GPIO_Label
 PF1.GPIO_Label=angle_0
 PF1.Locked=true
 PF1.Signal=GPIO_Output
-PF3.GPIOParameters=GPIO_Label
+PF3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PF3.GPIO_Label=Auto_Hand_Betrieb
+PF3.GPIO_PuPd=GPIO_PULLDOWN
 PF3.Locked=true
 PF3.Signal=GPIO_Input
 PF5.GPIOParameters=GPIO_Label
@@ -365,7 +370,7 @@ ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_ADC2_Init-ADC2-false-HAL-true,14-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_ADC2_Init-ADC2-false-HAL-true,14-MX_TIM1_Init-TIM1-false-HAL-true,15-MX_TIM10_Init-TIM10-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -464,6 +469,8 @@ SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM10_CH1.0=TIM10_CH1,PWM Generation1 CH1
+SH.S_TIM10_CH1.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
@@ -473,6 +480,10 @@ TIM1.Period=50
 TIM1.Prescaler=32000
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM1.TIM_MasterOutputTrigger2=TIM_TRGO2_UPDATE
+TIM10.Channel=TIM_CHANNEL_1
+TIM10.IPParameters=Channel,Prescaler,Period
+TIM10.Period=100
+TIM10.Prescaler=6400
 TIM2.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
 TIM2.Period=200
 TIM2.Prescaler=32000
@@ -499,6 +510,8 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
