--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -84,56 +84,57 @@ Mcu.Pin0=PE2
 Mcu.Pin1=PE3
 Mcu.Pin10=PF5
 Mcu.Pin11=PF6
-Mcu.Pin12=PF8
-Mcu.Pin13=PH0/OSC_IN
-Mcu.Pin14=PH1/OSC_OUT
-Mcu.Pin15=PC1
-Mcu.Pin16=PA0/WKUP
-Mcu.Pin17=PA1
-Mcu.Pin18=PA2
-Mcu.Pin19=PA3
+Mcu.Pin12=PF7
+Mcu.Pin13=PF8
+Mcu.Pin14=PH0/OSC_IN
+Mcu.Pin15=PH1/OSC_OUT
+Mcu.Pin16=PC1
+Mcu.Pin17=PA0/WKUP
+Mcu.Pin18=PA1
+Mcu.Pin19=PA2
 Mcu.Pin2=PE4
-Mcu.Pin20=PA5
-Mcu.Pin21=PA6
-Mcu.Pin22=PA7
-Mcu.Pin23=PC4
-Mcu.Pin24=PC5
-Mcu.Pin25=PB13
-Mcu.Pin26=PB14
-Mcu.Pin27=PD8
-Mcu.Pin28=PD9
-Mcu.Pin29=PD12
+Mcu.Pin20=PA3
+Mcu.Pin21=PA5
+Mcu.Pin22=PA6
+Mcu.Pin23=PA7
+Mcu.Pin24=PC4
+Mcu.Pin25=PC5
+Mcu.Pin26=PB13
+Mcu.Pin27=PB14
+Mcu.Pin28=PD8
+Mcu.Pin29=PD9
 Mcu.Pin3=PE5
-Mcu.Pin30=PG6
-Mcu.Pin31=PG7
-Mcu.Pin32=PA8
-Mcu.Pin33=PA9
-Mcu.Pin34=PA10
-Mcu.Pin35=PA11
-Mcu.Pin36=PA12
-Mcu.Pin37=PA13
-Mcu.Pin38=PA14
-Mcu.Pin39=PD5
+Mcu.Pin30=PD12
+Mcu.Pin31=PG6
+Mcu.Pin32=PG7
+Mcu.Pin33=PA8
+Mcu.Pin34=PA9
+Mcu.Pin35=PA10
+Mcu.Pin36=PA11
+Mcu.Pin37=PA12
+Mcu.Pin38=PA13
+Mcu.Pin39=PA14
 Mcu.Pin4=PC13
-Mcu.Pin40=PD6
-Mcu.Pin41=PG11
-Mcu.Pin42=PG13
-Mcu.Pin43=PB3
-Mcu.Pin44=PB7
-Mcu.Pin45=PB8
-Mcu.Pin46=VP_SYS_VS_Systick
-Mcu.Pin47=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin49=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin40=PD5
+Mcu.Pin41=PD6
+Mcu.Pin42=PG11
+Mcu.Pin43=PG13
+Mcu.Pin44=PB3
+Mcu.Pin45=PB7
+Mcu.Pin46=PB8
+Mcu.Pin47=VP_SYS_VS_Systick
+Mcu.Pin48=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin49=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin5=PC14/OSC32_IN
-Mcu.Pin50=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin51=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin52=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin50=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin51=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin52=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin53=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin6=PC15/OSC32_OUT
 Mcu.Pin7=PF0
 Mcu.Pin8=PF1
 Mcu.Pin9=PF3
-Mcu.PinsNb=53
+Mcu.PinsNb=54
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -311,6 +312,11 @@ PF5.Locked=true
 PF5.Signal=GPIO_Input
 PF6.Mode=IN4
 PF6.Signal=ADC3_IN4
+PF7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PF7.GPIO_Label=angle_sync
+PF7.GPIO_PuPd=GPIO_PULLDOWN
+PF7.Locked=true
+PF7.Signal=GPIO_Input
 PF8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PF8.GPIO_Label=Memory_store
 PF8.GPIO_PuPd=GPIO_PULLDOWN
