--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -84,11 +84,11 @@ Mcu.Pin0=PE2
 Mcu.Pin1=PE3
 Mcu.Pin10=PF5
 Mcu.Pin11=PF6
-Mcu.Pin12=PF7
-Mcu.Pin13=PF8
-Mcu.Pin14=PH0/OSC_IN
-Mcu.Pin15=PH1/OSC_OUT
-Mcu.Pin16=PC1
+Mcu.Pin12=PF8
+Mcu.Pin13=PH0/OSC_IN
+Mcu.Pin14=PH1/OSC_OUT
+Mcu.Pin15=PC1
+Mcu.Pin16=PC2
 Mcu.Pin17=PA0/WKUP
 Mcu.Pin18=PA1
 Mcu.Pin19=PA2
@@ -240,6 +240,11 @@ PC14/OSC32_IN.Locked=true
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Locked=true
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC2.GPIO_Label=angle_sync
+PC2.GPIO_PuPd=GPIO_PULLDOWN
+PC2.Locked=true
+PC2.Signal=GPIO_Input
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=RMII_RXD0 [LAN8742A-CZ-TR_RXD0]
 PC4.Locked=true
@@ -312,11 +317,6 @@ PF5.Locked=true
 PF5.Signal=GPIO_Input
 PF6.Mode=IN4
 PF6.Signal=ADC3_IN4
-PF7.GPIOParameters=GPIO_PuPd,GPIO_Label
-PF7.GPIO_Label=angle_sync
-PF7.GPIO_PuPd=GPIO_PULLDOWN
-PF7.Locked=true
-PF7.Signal=GPIO_Input
 PF8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PF8.GPIO_Label=Memory_store
 PF8.GPIO_PuPd=GPIO_PULLDOWN
