--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -65,10 +65,12 @@ Mcu.IP10=TIM2
 Mcu.IP11=TIM3
 Mcu.IP12=TIM4
 Mcu.IP13=TIM10
-Mcu.IP14=USART2
-Mcu.IP15=USART3
-Mcu.IP16=USB_DEVICE
-Mcu.IP17=USB_OTG_FS
+Mcu.IP14=UART4
+Mcu.IP15=USART1
+Mcu.IP16=USART2
+Mcu.IP17=USART3
+Mcu.IP18=USB_DEVICE
+Mcu.IP19=USB_OTG_FS
 Mcu.IP2=ADC3
 Mcu.IP3=CORTEX_M7
 Mcu.IP4=DMA
@@ -77,7 +79,7 @@ Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=SYS
 Mcu.IP9=TIM1
-Mcu.IPNb=18
+Mcu.IPNb=20
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -100,40 +102,44 @@ Mcu.Pin23=PC4
 Mcu.Pin24=PC5
 Mcu.Pin25=PB13
 Mcu.Pin26=PB14
-Mcu.Pin27=PD8
-Mcu.Pin28=PD9
-Mcu.Pin29=PD12
+Mcu.Pin27=PB15
+Mcu.Pin28=PD8
+Mcu.Pin29=PD9
 Mcu.Pin3=PE5
-Mcu.Pin30=PG6
-Mcu.Pin31=PG7
-Mcu.Pin32=PA8
-Mcu.Pin33=PA9
-Mcu.Pin34=PA10
-Mcu.Pin35=PA11
-Mcu.Pin36=PA12
-Mcu.Pin37=PA13
-Mcu.Pin38=PA14
-Mcu.Pin39=PD5
+Mcu.Pin30=PD12
+Mcu.Pin31=PG6
+Mcu.Pin32=PG7
+Mcu.Pin33=PA8
+Mcu.Pin34=PA9
+Mcu.Pin35=PA10
+Mcu.Pin36=PA11
+Mcu.Pin37=PA12
+Mcu.Pin38=PA13
+Mcu.Pin39=PA14
 Mcu.Pin4=PC13
-Mcu.Pin40=PD6
-Mcu.Pin41=PG11
-Mcu.Pin42=PG13
-Mcu.Pin43=PB3
-Mcu.Pin44=PB7
-Mcu.Pin45=PB8
-Mcu.Pin46=VP_SYS_VS_Systick
-Mcu.Pin47=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin49=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin40=PC10
+Mcu.Pin41=PC11
+Mcu.Pin42=PD5
+Mcu.Pin43=PD6
+Mcu.Pin44=PG11
+Mcu.Pin45=PG13
+Mcu.Pin46=PB3
+Mcu.Pin47=PB6
+Mcu.Pin48=PB7
+Mcu.Pin49=PB8
 Mcu.Pin5=PC14/OSC32_IN
-Mcu.Pin50=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin51=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin52=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin50=VP_SYS_VS_Systick
+Mcu.Pin51=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin52=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin53=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin54=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin55=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin56=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin6=PC15/OSC32_OUT
 Mcu.Pin7=PF0
 Mcu.Pin8=PF1
 Mcu.Pin9=PF3
-Mcu.PinsNb=53
+Mcu.PinsNb=57
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -155,102 +161,136 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA0/WKUP.Signal=ADCx_IN0
-PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
+PA1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA1.GPIO_Mode=GPIO_MODE_AF_PP
+PA1.GPIO_PuPd=GPIO_NOPULL
+PA1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA1.Locked=true
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=USB_ID
+PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA10.GPIO_Mode=GPIO_MODE_AF_PP
+PA10.GPIO_PuPd=GPIO_NOPULL
+PA10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA10.Locked=true
 PA10.Signal=USB_OTG_FS_ID
-PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=USB_DM
+PA11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA11.GPIO_Mode=GPIO_MODE_AF_PP
+PA11.GPIO_PuPd=GPIO_NOPULL
+PA11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA11.Locked=true
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
-PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=USB_DP
+PA12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA12.GPIO_Mode=GPIO_MODE_AF_PP
+PA12.GPIO_PuPd=GPIO_NOPULL
+PA12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA12.Locked=true
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
-PA13.GPIOParameters=GPIO_Label
-PA13.GPIO_Label=TMS
 PA13.Locked=true
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
-PA14.GPIOParameters=GPIO_Label
-PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
+PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA2.GPIO_Mode=GPIO_MODE_AF_PP
+PA2.GPIO_PuPd=GPIO_NOPULL
+PA2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA2.Locked=true
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
 PA3.Signal=ADCx_IN3
 PA5.Signal=ADCx_IN5
 PA6.Signal=S_TIM3_CH1
-PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
+PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA7.GPIO_Mode=GPIO_MODE_AF_PP
+PA7.GPIO_PuPd=GPIO_NOPULL
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA7.Locked=true
 PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=USB_SOF [TP1]
+PA8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA8.GPIO_Mode=GPIO_MODE_AF_PP
+PA8.GPIO_PuPd=GPIO_NOPULL
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA8.Locked=true
 PA8.Signal=USB_OTG_FS_SOF
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=USB_VBUS
+PA9.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PA9.GPIO_Mode=GPIO_MODE_INPUT
+PA9.GPIO_PuPd=GPIO_NOPULL
 PA9.Locked=true
 PA9.Signal=USB_OTG_FS_VBUS
-PB13.GPIOParameters=GPIO_Label
-PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
+PB13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PB13.GPIO_Mode=GPIO_MODE_AF_PP
+PB13.GPIO_PuPd=GPIO_NOPULL
+PB13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB13.Locked=true
 PB13.Mode=RMII
 PB13.Signal=ETH_TXD1
-PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=LD3 [Red]
+PB14.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB14.GPIO_PuPd=GPIO_NOPULL
+PB14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB14.Locked=true
+PB14.PinState=GPIO_PIN_RESET
 PB14.Signal=GPIO_Output
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=SWO
+PB15.Mode=Asynchronous
+PB15.Signal=USART1_RX
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
-PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=LD2 [Blue]
+PB6.Mode=Asynchronous
+PB6.Signal=USART1_TX
+PB7.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP,GPIO_FM7
+PB7.GPIO_FM7=__NULL
+PB7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB7.GPIO_PuPd=GPIO_NOPULL
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB7.Locked=true
+PB7.PinState=GPIO_PIN_RESET
 PB7.Signal=GPIO_Output
 PB8.Signal=S_TIM10_CH1
-PC1.GPIOParameters=GPIO_Label
-PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
+PC1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PC1.GPIO_Mode=GPIO_MODE_AF_PP
+PC1.GPIO_PuPd=GPIO_NOPULL
+PC1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC1.Locked=true
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
-PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=USER_Btn [B1]
+PC10.Mode=Asynchronous
+PC10.Signal=UART4_TX
+PC11.Mode=Asynchronous
+PC11.Signal=UART4_RX
+PC13.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PC13.GPIO_PuPd=GPIO_NOPULL
 PC13.Locked=true
 PC13.Signal=GPXTI13
 PC14/OSC32_IN.Locked=true
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Locked=true
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
-PC2.GPIOParameters=GPIO_PuPd,GPIO_Label
-PC2.GPIO_Label=angle_sync
-PC2.GPIO_PuPd=GPIO_PULLDOWN
+PC2.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PC2.GPIO_Mode=GPIO_MODE_INPUT
+PC2.GPIO_PuPd=GPIO_NOPULL
 PC2.Locked=true
 PC2.Signal=GPIO_Input
-PC4.GPIOParameters=GPIO_Label
-PC4.GPIO_Label=RMII_RXD0 [LAN8742A-CZ-TR_RXD0]
+PC4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PC4.GPIO_Mode=GPIO_MODE_AF_PP
+PC4.GPIO_PuPd=GPIO_NOPULL
+PC4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC4.Locked=true
 PC4.Mode=RMII
 PC4.Signal=ETH_RXD0
-PC5.GPIOParameters=GPIO_Label
-PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
+PC5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PC5.GPIO_Mode=GPIO_MODE_AF_PP
+PC5.GPIO_PuPd=GPIO_NOPULL
+PC5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC5.Locked=true
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
@@ -267,77 +307,90 @@ PD5.Mode=Asynchronous
 PD5.Signal=USART2_TX
 PD6.Mode=Asynchronous
 PD6.Signal=USART2_RX
-PD8.GPIOParameters=GPIO_Label
-PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
+PD8.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPd
+PD8.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
+PD8.GPIO_PuPd=GPIO_NOPULL
+PD8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD8.Locked=true
 PD8.Mode=Asynchronous
 PD8.Signal=USART3_TX
-PD9.GPIOParameters=GPIO_Label
-PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
+PD9.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPd
+PD9.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
+PD9.GPIO_PuPd=GPIO_NOPULL
+PD9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
-PE2.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE2.GPIO_Label=Flash_start
-PE2.GPIO_PuPd=GPIO_PULLDOWN
+PE2.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PE2.GPIO_Mode=GPIO_MODE_INPUT
+PE2.GPIO_PuPd=GPIO_NOPULL
 PE2.Locked=true
 PE2.Signal=GPIO_Input
-PE3.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE3.GPIO_Label=NotAus
-PE3.GPIO_PuPd=GPIO_PULLDOWN
+PE3.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PE3.GPIO_Mode=GPIO_MODE_INPUT
+PE3.GPIO_PuPd=GPIO_NOPULL
 PE3.Locked=true
 PE3.Signal=GPIO_Input
-PE4.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE4.GPIO_Label=free_button1
-PE4.GPIO_PuPd=GPIO_PULLDOWN
+PE4.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PE4.GPIO_Mode=GPIO_MODE_INPUT
+PE4.GPIO_PuPd=GPIO_NOPULL
 PE4.Locked=true
 PE4.Signal=GPIO_Input
-PE5.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE5.GPIO_Label=free_button2
-PE5.GPIO_PuPd=GPIO_PULLDOWN
+PE5.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PE5.GPIO_Mode=GPIO_MODE_INPUT
+PE5.GPIO_PuPd=GPIO_NOPULL
 PE5.Locked=true
 PE5.Signal=GPIO_Input
-PF0.GPIOParameters=GPIO_Label
-PF0.GPIO_Label=Counterrisingedge
+PF0.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PF0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PF0.GPIO_PuPd=GPIO_NOPULL
 PF0.Locked=true
 PF0.Signal=GPXTI0
-PF1.GPIOParameters=GPIO_Label
-PF1.GPIO_Label=angle_0
+PF1.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF1.GPIO_PuPd=GPIO_NOPULL
+PF1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PF1.Locked=true
+PF1.PinState=GPIO_PIN_RESET
 PF1.Signal=GPIO_Output
-PF3.GPIOParameters=GPIO_PuPd,GPIO_Label
-PF3.GPIO_Label=Auto_Hand_Betrieb
-PF3.GPIO_PuPd=GPIO_PULLDOWN
+PF3.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PF3.GPIO_Mode=GPIO_MODE_INPUT
+PF3.GPIO_PuPd=GPIO_NOPULL
 PF3.Locked=true
 PF3.Signal=GPIO_Input
 PF6.Mode=IN4
 PF6.Signal=ADC3_IN4
-PF8.GPIOParameters=GPIO_PuPd,GPIO_Label
-PF8.GPIO_Label=Flash_stop
-PF8.GPIO_PuPd=GPIO_PULLDOWN
+PF8.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PF8.GPIO_Mode=GPIO_MODE_INPUT
+PF8.GPIO_PuPd=GPIO_NOPULL
 PF8.Locked=true
 PF8.Signal=GPIO_Input
-PG11.GPIOParameters=GPIO_Label
-PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
+PG11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PG11.GPIO_Mode=GPIO_MODE_AF_PP
+PG11.GPIO_PuPd=GPIO_NOPULL
+PG11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PG11.Locked=true
 PG11.Mode=RMII
 PG11.Signal=ETH_TX_EN
-PG13.GPIOParameters=GPIO_Label
-PG13.GPIO_Label=RMII_TXD0 [LAN8742A-CZ-TR_TXD0]
+PG13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PG13.GPIO_Mode=GPIO_MODE_AF_PP
+PG13.GPIO_PuPd=GPIO_NOPULL
+PG13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PG13.Locked=true
 PG13.Mode=RMII
 PG13.Signal=ETH_TXD0
-PG6.GPIOParameters=GPIO_PuPd,GPIO_Label
-PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
-PG6.GPIO_PuPd=GPIO_PULLDOWN
+PG6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PG6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PG6.GPIO_PuPd=GPIO_NOPULL
+PG6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PG6.Locked=true
+PG6.PinState=GPIO_PIN_RESET
 PG6.Signal=GPIO_Output
-PG7.GPIOParameters=GPIO_Label
-PG7.GPIO_Label=USB_OverCurrent [STMPS2151STR_FAULT]
+PG7.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PG7.GPIO_Mode=GPIO_MODE_INPUT
+PG7.GPIO_PuPd=GPIO_NOPULL
 PG7.Locked=true
 PG7.Signal=GPIO_Input
-PH0/OSC_IN.GPIOParameters=GPIO_Label
-PH0/OSC_IN.GPIO_Label=MCO [STM32F103CBT6_PA8]
 PH0/OSC_IN.Locked=true
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
@@ -371,7 +424,7 @@ ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_ADC2_Init-ADC2-false-HAL-true,14-MX_TIM1_Init-TIM1-false-HAL-true,15-MX_TIM10_Init-TIM10-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_ADC2_Init-ADC2-false-HAL-true,14-MX_TIM1_Init-TIM1-false-HAL-true,15-MX_TIM10_Init-TIM10-false-HAL-true,16-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -498,6 +551,10 @@ TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
 TIM4.Period=10000
 TIM4.Prescaler=64
+UART4.BaudRate=9600
+UART4.IPParameters=BaudRate
+USART1.IPParameters=VirtualMode-Asynchronous
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
